<resources>
    <string name="app_name">FilmIn</string>
    <string name="welcome_textview">Selamat Datang di FILMIN !</string>
    <string name="title_text">di FILMIN !</string>
    <string name="title_home">Daftar Film Paling Banyak Ditonton di Indonesia</string>
    <string name="about_me">About Me</string>
    <string name="back">back</string>
    <string name="title_about_me">Tentang Saya</string>
    <string name="nama_saya">Kahil Akbar Bayu Adityo</string>
    <string name="email_saya">kahil.akbar@gmail.com</string>
    <string name="film_name">Nama Film</string>
    <string name="duration">Durasi</string>
    <string name="rating">Rating</string>
    <string name="view">View</string>
    <string name="film_producer">Producer - Tahun</string>
    <string name="synopsis">SINOPSIS</string>
    <string name="synopsis_detail">Lorem Ipsum Dolor Sit Amet</string>
    <string-array name="data_name">
        <item>KKN di Desa Penari</item>
        <item>Agak Laen</item>
        <item>Warkop DKI Reborn</item>
        <item>Pengabdi Setan 2</item>
        <item>Dilan 1990</item>
        <item>Miracle in Cell No. 7</item>
        <item>Dilan 1991</item>
        <item>Sewu Dino</item>
        <item>Laskar Pelangi</item>
        <item>Habibie &amp; Ainun</item>
    </string-array>
    <string-array name="data_views">
        <item>10.061.033</item>
        <item>8.205.798</item>
        <item>6.858.616</item>
        <item>6.391.982</item>
        <item>6.315.664</item>
        <item>5.860.917</item>
        <item>5.253.411</item>
        <item>4.891.609</item>
        <item>4.719.453</item>
        <item>4.601.249</item>
    </string-array>
    <string-array name="data_rating">
        <item>5.9/10</item>
        <item>8.1/10</item>
        <item>6.4/10</item>
        <item>6.7/10</item>
        <item>7.0/10</item>
        <item>7.7/10</item>
        <item>6.5/10</item>
        <item>6.0/10</item>
        <item>7.9/10</item>
        <item>7.6/10</item>
    </string-array>
    <string-array name="data_duration">
        <item>2J 10M</item>
        <item>1J 59M</item>
        <item>1J 35M</item>
        <item>1J 59M</item>
        <item>1J 50M</item>
        <item>2J 12M</item>
        <item>2J 1M</item>
        <item>2J 1M</item>
        <item>2J 4M</item>
        <item>1J 58M</item>
    </string-array>
    <string-array name="data_producer">
        <item>MD Pictures - 2022</item>
        <item>Imajinari - 2024</item>
        <item>Falcon Pictures - 2016</item>
        <item>Rapi Films - 2022</item>
        <item>Max Pictures - 2018</item>
        <item>Falcon Pictures - 2022</item>
        <item>MD Pictures - 2023</item>
        <item>Miles Films - 2008</item>
        <item>MD Pictures - 2012</item>
        <item>Rapi Films -2017</item>
    </string-array>
</resources>