<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/primary_red"
        android:layout_width="match_parent"
        android:id="@+id/item_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_round"
            card_view:cardCornerRadius="12dp"
            card_view:layout_constraintTop_toTopOf="@id/item_parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="@id/item_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="84dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="@id/item_parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/image_round"
            card_view:layout_constraintTop_toTopOf="@+id/image_round"
            tools:text="@string/film_name"
            android:fontFamily="@font/jockey_one_regular"
            android:textColor="@color/white"
            android:letterSpacing="0.1"
            />

        <TextView
            android:id="@+id/tv_item_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toTopOf="@+id/star_rating"
            card_view:layout_constraintBottom_toBottomOf="@id/star_rating"
            card_view:layout_constraintEnd_toStartOf="@id/guideline"
            android:fontFamily="@font/jockey_one_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:letterSpacing="0.05"
            tools:text="@string/duration" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_star_24"
            android:id="@+id/star_rating"
            android:layout_marginTop="4dp"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"/>
        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            card_view:layout_constraintStart_toEndOf="@+id/star_rating"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            card_view:layout_constraintTop_toTopOf="@+id/star_rating"
            card_view:layout_constraintBottom_toBottomOf="@id/star_rating"
            tools:text="@string/rating"
            android:fontFamily="@font/jockey_one_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:letterSpacing="0.1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_remove_red_eye_24"
            android:id="@+id/view_count"
            android:layout_marginTop="6dp"
            card_view:layout_constraintStart_toEndOf="@+id/image_round"
            card_view:layout_constraintTop_toBottomOf="@+id/star_rating"
            android:layout_marginStart="16dp"/>
        <TextView
            android:id="@+id/tv_item_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            card_view:layout_constraintStart_toEndOf="@+id/view_count"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/view_count"
            card_view:layout_constraintBottom_toBottomOf="@id/view_count"
            tools:text="@string/view"
            android:fontFamily="@font/jockey_one_regular"
            android:textColor="@color/white"
            android:letterSpacing="0.05" />
        <TextView
            android:id="@+id/tv_item_producer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/image_round"
            card_view:layout_constraintTop_toBottomOf="@+id/view_count"
            card_view:layout_constraintBottom_toBottomOf="@id/image_round"
            tools:text="@string/film_producer"
            android:fontFamily="@font/jockey_one_regular"
            android:textColor="@color/white"
            android:letterSpacing="0.1"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_begin="150dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>