<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AboutMeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_custom"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/about_me_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:contentDescription="@string/back"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="0dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/tentang_saya"
                    android:fontFamily="@font/jockey_one_regular"
                    android:text="@string/title_about_me"
                    android:textAlignment="center"
                    android:textColor="@color/primary_red"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_about_me"
                    android:layout_width="wrap_content"
                    android:layout_height="256dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/fotodiri"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tentang_saya" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/nama_saya"
                    android:fontFamily="@font/jockey_one_regular"
                    android:text="@string/nama_saya"
                    android:textAlignment="center"
                    android:textColor="@color/primary_red"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/image_about_me" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:id="@+id/email_saya"
                    android:fontFamily="@font/jockey_one_regular"
                    android:text="@string/email_saya"
                    android:textAlignment="center"
                    android:textColor="@color/primary_red"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@id/nama_saya" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>